[project]
name = "sonos-doorbell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.134.0",
    "mutagen>=1.47.0",
    "python-multipart>=0.0.22",
    "soco>=0.30.14",
    "uvicorn>=0.41.0",
]
